@@ -22,6 +22,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #include "JackEngineControl.h"
 #include "JackGlobals.h"
 #include "JackError.h"
+#include <set>
 #include <iostream>
 #include <assert.h>
 
@@ -272,31 +273,42 @@ int JackConnectionManager::ResumeRefNum(JackClientControl* control, JackSynchro*
     return res;
 }
 
-void JackConnectionManager::Visit(jack_int_t refnum, bool visited[CLIENT_NUM], std::vector<jack_int_t>& res)
+static bool HasNoConnection(jack_int_t* table)
 {
-    if (!visited[refnum]) {
-        visited[refnum] = true;
-        jack_int_t output_ref[CLIENT_NUM];
-        fConnectionRef.GetOutputTable1(refnum, output_ref);
-
-        //const jack_int_t* output_ref = fConnectionRef.GetItems(refnum);
-        for (int i = 0; i < CLIENT_NUM; i++) {
-            if (output_ref[i] > 0)
-                Visit(i, visited, res);
-        }
-        res.push_back(refnum);
+    for (int ref = 0; ref < CLIENT_NUM; ref++) {
+        if (table[ref] > 0) return false;
     }
+    return true;
 }
+
+// Using http://en.wikipedia.org/wiki/Topological_sorting
 
 void JackConnectionManager::TopologicalSort(std::vector<jack_int_t>& sorted)
 {
-    bool visited[CLIENT_NUM];
-    for (int i = 0; i < CLIENT_NUM; i++) {
-        visited[i] = false;
-    }
+    JackFixedMatrix<CLIENT_NUM> tmp;
+    std::set<jack_int_t> level;
 
-    Visit(AUDIO_DRIVER_REFNUM, visited, sorted);
-    Visit(FREEWHEEL_DRIVER_REFNUM, visited, sorted);
+    fConnectionRef.Copy(tmp);
+
+    // Inputs of the graph
+    level.insert(AUDIO_DRIVER_REFNUM);
+    level.insert(FREEWHEEL_DRIVER_REFNUM);
+
+    while (level.size() > 0) {
+        jack_int_t refnum = *level.begin();
+        sorted.push_back(refnum);
+        level.erase(level.begin());
+        const jack_int_t* output_ref1 = tmp.GetItems(refnum);
+        for (int dst = 0; dst < CLIENT_NUM; dst++) {
+            if (output_ref1[dst] > 0) {
+                tmp.ClearItem(refnum, dst);
+                jack_int_t output_ref2[CLIENT_NUM];
+                tmp.GetOutputTable1(dst, output_ref2);
+                if (HasNoConnection(output_ref2))
+                    level.insert(dst);
+            }
+        }
+    }
 }
 
 /*!
