@@ -2,19 +2,19 @@
  *  Copyright (C) 2004 Rui Nuno Capela, Steve Harris
  *  Copyright (C) 2008 Nedko Arnaudov
  *  Copyright (C) 2008 Grame
- *  
+ *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU Lesser General Public License as published by
  *  the Free Software Foundation; either version 2.1 of the License, or
  *  (at your option) any later version.
- *  
+ *
  *  This program is distributed in the hope that it will be useful,
  *  but WITHOUT ANY WARRANTY; without even the implied warranty of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  *  GNU Lesser General Public License for more details.
- *  
+ *
  *  You should have received a copy of the GNU Lesser General Public License
- *  along with this program; if not, write to the Free Software 
+ *  along with this program; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  *
  */
@@ -34,7 +34,7 @@ JackMessageBuffer::JackMessageBuffer()
 
 JackMessageBuffer::~JackMessageBuffer()
 {}
-    
+
 void JackMessageBuffer::Start()
 {
     fRunning = true;
@@ -44,9 +44,9 @@ void JackMessageBuffer::Start()
 void JackMessageBuffer::Stop()
 {
     if (fOverruns > 0) {
-        jack_error("WARNING: %d message buffer overruns!", fOverruns); 
+        jack_error("WARNING: %d message buffer overruns!", fOverruns);
     } else {
-        jack_log("no message buffer overruns"); 
+        jack_log("no message buffer overruns");
     }
     fGuard.Lock();
     fRunning = false;
@@ -55,7 +55,7 @@ void JackMessageBuffer::Stop()
     fThread.Stop();
     Flush();
 }
-    
+
 void JackMessageBuffer::Flush()
 {
     while (fOutBuffer != fInBuffer) {
@@ -76,7 +76,7 @@ void JackMessageBuffer::AddMessage(int level, const char *message)
         INC_ATOMIC(&fOverruns);
     }
 }
-         
+
 bool JackMessageBuffer::Execute()
 {
     while (fRunning) {
@@ -94,10 +94,10 @@ bool JackMessageBuffer::Execute()
         Flush();
         fGuard.Unlock();
     }
-    return false;	
+    return false;
 }
 
-void JackMessageBuffer::Create() 
+void JackMessageBuffer::Create()
 {
     if (fInstance == NULL) {
         fInstance = new JackMessageBuffer();
@@ -105,7 +105,7 @@ void JackMessageBuffer::Create()
     }
 }
 
-void JackMessageBuffer::Destroy() 
+void JackMessageBuffer::Destroy()
 {
     if (fInstance != NULL) {
         fInstance->Stop();
@@ -114,7 +114,7 @@ void JackMessageBuffer::Destroy()
     }
 }
 
-void JackMessageBufferAdd(int level, const char *message) 
+void JackMessageBufferAdd(int level, const char *message)
 {
     if (Jack::JackMessageBuffer::fInstance == NULL) {
         /* Unable to print message with realtime safety. Complain and print it anyway. */
@@ -137,7 +137,6 @@ void JackMessageBuffer::SetInitCallback(JackThreadInitCallback callback, void *a
     /* and we're done */
     fGuard.Unlock();
 }
-    
 
 };
 
